--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: braivix-analyzer
     env: python
+    rootDir: backend
     buildCommand: |
       apt-get update && apt-get install -y tesseract-ocr poppler-utils
       pip install -r requirements.txt
