--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -6,6 +6,6 @@ services:
     buildCommand: |
       apt-get update && apt-get install -y tesseract-ocr poppler-utils
       pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000 --app-dir app
     envVars:
       - fromGroup: Braivix-Secrets
