Added new files to front and backend files as well as delted some things so we can deploy backend on vercel as well, instead of render

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,13 @@
 fastapi
 uvicorn
-pdfminer.six
+python-dotenv
+openai
 pandas
-openpyxl
+pdfminer.six
 python-multipart
-pydantic
 python-docx
+openpyxl
 pytesseract
 pdf2image
 Pillow
-openai>=1.51.0
-python-dotenv
 requests
-
-
-
-
