--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,19 @@
+# Core backend
 fastapi==0.116.1
-starlette==0.47.3
 uvicorn==0.35.0
-openai==2.3.0
-pandas==1.5.3
-python-docx==1.2.0
-pdfminer.six==20250506
+starlette==0.47.3
+pydantic==2.11.7
 python-multipart==0.0.20
-langdetect==1.0.9
+# File parsing
+pdfminer.six==20250506
+python-docx==1.2.0
+pandas==1.5.3
+openpyxl==3.1.5
+xlrd==2.0.1
 fpdf2==2.8.4
+# AI / NLP
+openai==2.3.0
+langdetect==1.0.9
+# Utility
 requests==2.32.4
-python-dotenv==1.1.1
+python-dotenv==1.0.1
