--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -6,32 +6,23 @@ services:
     plan: free
     region: frankfurt
 
-    # 🏗️ Build Phase
     buildCommand: |
       apt-get update && \
-      # Core system libs for Camelot + PDF extraction
       apt-get install -y \
         ghostscript \
         poppler-utils \
+        tesseract-ocr \
         libgl1 \
         libglib2.0-0 \
-        tesseract-ocr \
         python3-tk && \
-      # Install Python dependencies
       pip install --upgrade pip setuptools wheel && \
       pip install -r requirements.txt
 
-    # 🚀 Start FastAPI via Uvicorn
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
 
     envVars:
-      # 🔐 Python version pin – prevents pandas build errors
       - key: PYTHON_VERSION
-        value: 3.12.4
-
-      # 🌍 Required for Render web services
+        value: 3.12.4     # ✅ Force Python 3.12 to avoid pandas build errors
       - key: PORT
         value: 10000
-
-      # 🧠 Add your OpenAI key and other secrets from Render’s dashboard
       - fromGroup: Braivix-Secrets
