--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ python-multipart==0.0.20
 # File parsing
 pdfminer.six==20250506
 python-docx==1.2.0
-pandas==1.5.3
+pandas==2.2.2
 openpyxl==3.1.5
 xlrd==2.0.1
 fpdf2==2.8.4
@@ -17,3 +17,5 @@ langdetect==1.0.9
 # Utility
 requests==2.32.4
 python-dotenv==1.0.1
+numpy==1.26.4
+numba==0.59.1
