--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ python-multipart==0.0.20
 # File parsing
 pdfminer.six==20250506
 python-docx==1.2.0
-pandas==2.2.2
+pandas==2.2.2 --only-binary pandas
 openpyxl==3.1.5
 xlrd==2.0.1
 fpdf2==2.8.4
