--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,6 @@ primary_region = 'lhr'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+  RUN apt-get update && apt-get install -y tesseract-ocr poppler-utils
+
