--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,15 @@
-# Core backend
+# ==============================
+# 📦 Bravix Backend Requirements (Fly.io Stable Build)
+# ==============================
+
+# --- Core backend ---
 fastapi==0.116.1
 uvicorn==0.35.0
 starlette==0.47.3
 pydantic==2.11.7
 python-multipart==0.0.20
 
-# File parsing
+# --- File parsing ---
 pdfminer.six==20250506
 python-docx==1.2.0
 pandas==2.3.3
@@ -13,17 +17,21 @@ openpyxl==3.1.5
 xlrd==2.0.1
 fpdf2==2.8.4
 
-# AI / NLP
+# --- AI / NLP ---
 openai==2.3.0
 langdetect==1.0.9
 
-# Utility
+# --- Utilities ---
 requests==2.32.4
 python-dotenv==1.0.1
 numpy==1.26.4
 numba==0.59.1
 
-# OCR + Image processing
+# --- OCR + Image processing ---
 pytesseract==0.3.10
 Pillow==10.3.0
 pdf2image==1.17.0
+
+# --- PDF rendering ---
+# Leave version unpinned for automatic compatibility
+weasyprint
